feat: prometheus kuad to grafana

--- a/monitoring-charts/charts/kube-prometheus-stack/values.yaml
+++ b/monitoring-charts/charts/kube-prometheus-stack/values.yaml
@@ -3245,7 +3245,13 @@ prometheus:
     ## The scrape configuration example below will find master nodes, provided they have the name .*mst.*, relabel the
     ## port to 2379 and allow etcd scraping provided it is running on all Kubernetes master nodes
     ##
-    additionalScrapeConfigs: []
+    additionalScrapeConfigs:
+      - job_name: kuad
+        scrape_interval: 10s
+        static_configs:
+        - targets:
+          - localhost:8080
+    # additionalScrapeConfigs: []
     # - job_name: kube-etcd
     #   kubernetes_sd_configs:
     #     - role: node
